Final Branch Commit for Phase 1
Update and commit the final changes to the MapTest branch before committing to main branch

Co-Authored-By: risktakingkev <65381496+risktakingkev@users.noreply.github.com>
Co-Authored-By: Humberto Dominguez Jr. <128658763+betito44@users.noreply.github.com>

--- a/MapReduceNativeTest/MapReduceNativeTest.vcxproj.filters
+++ b/MapReduceNativeTest/MapReduceNativeTest.vcxproj.filters
@@ -15,21 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Map_Reduce.cpp">
+    <ClCompile Include="MapReduceNativeTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Map.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test1.cpp">
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="FileManager.h">
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
